--- a/B1W9O1-Handy-master/index.html
+++ b/B1W9O1-Handy-master/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Da Vinci Handy</title>
+    <title>Da Vinci Handy - HOME </title>
 </head>
 
 <body>
@@ -18,11 +18,11 @@
                 <ul>
                     <li class="HOME"><a href="index.html"> HOME</a></li>
                  <li>   <div class="dropdown">
-                    <a class="dropbtn">OVER ONS</a>
+                    <a class="dropbtn">OVER ONS ↓</a>
                       <div class="dropdown-content">
                       <a href="#geschiedenissprong">geschiedenis</a>
                       <a href="#dealssprong">deals</a>
-                      <a href="#diestensprong">diensten</a>
+                      <a href="diensten.html">diensten</a>
                       </div>
                     </div>
                 </li>
@@ -40,14 +40,20 @@
         <div id="item1">
             <a id="geschiedenissprong"></a>
             <img src="img/banner-1.jpg" alt="geschiedenis">
+            <div id="geschiedenishover" class="items">
+            <div class="hovertext"><a href="#geschiedenissprong">Geschiedenis</div></div>
         </div>
         <div id="item2">
             <a id="dealssprong"></a>
             <img src="img/banner-2.jpg" alt="deals">
+            <div id="dealshover" class="items">
+            <div class="hovertext"><a href="#dealssprong">deals</div></div>
         </div>
         <div id="item3">
             <a id="diestensprong"></a>
             <img src="img/banner-3.jpg" alt="diensten">
+            <div id="dienstenhover" class="items"></div>
+            <div class="hovertext"><a href="diensten.html">diensten</a></div>
         </div>
 
 
@@ -74,19 +80,19 @@
         <div class="button-container" id="button1">
             <a class="button"></a>
             <a href="./index.html" class="footerButton1">
-                <span class="footerButtonTitle">DEALS</span><br><span class="footerButtonText">BEKIJK ONZE DEALS</span>
+                <span class="footerButtonTitle"><div class="footertekst">DEALS</div></span><br><span class="footerButtonText"><div class="footertekst">BEKIJK ONZE DEALS</div></span>
             </a>
         </div>
         <div class="button-container" id="button2">
             <a class="button"></a>
-            <a href="./paginas/diensten.html" class="footerButton2">
-                <p class=footerP><span class="footerButtonTitle">DIENSTEN</span><br><span class="footerButtonText">BEKIJK ONZE DIENSTEN</span></p>
+            <a href="diensten.html" class="footerButton2">
+               <span class="footerButtonTitle"><div class="footertekst">DIENSTEN</div></span><br><span class="footerButtonText"><div class="footertekst">BEKIJK ONZE DIENSTEN</div></span></p>
             </a>
         </div>
         <div class="button-container" id="button3">
             <a class="button"></a>
             <a href="./index.html" class="footerButton3">
-                <span class="footerButtonTitle">CONTACT</span><br><span class="footerButtonText">STUUR EEN BERICHT</span>
+                <span class="footerButtonTitle"><div class="footertekst">CONTACT</div></span><br><span class="footerButtonText"><div class="footertekst">STUUR EEN BERICHT</div></span>
             </a>
         </div>
 
@@ -153,7 +159,7 @@
 
 
         <div class="balk">
-            © 2019 - Jitze van der Hoek  
+            © 2020 - Jitze van der Hoek  
         </div>
 
     </div>
